Including the Webhook in the actual project.

--- a/SendGrid.csproj
+++ b/SendGrid.csproj
@@ -56,11 +56,10 @@
     <Compile Include="Communication\Transport\SendGridSmtp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Webhooks\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Webhooks\SendGrid.ashx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
