--- a/SendGrid.csproj
+++ b/SendGrid.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{EED75AA8-4A0F-47C2-9CE6-3B072664F5E9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>com.bricksandmortar.SendGrid</RootNamespace>
-    <AssemblyName>com.bricksandmortar.SendGrid</AssemblyName>
+    <RootNamespace>com.bricksandmortarstudio.SendGrid</RootNamespace>
+    <AssemblyName>com.bricksandmortarstudio.SendGrid</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -60,6 +60,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Webhooks\SendGrid.ashx" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
