--- a/.gitignore
+++ b/.gitignore
@@ -2,23 +2,23 @@
 *.suo
 *.user
 *.sln.docstates
- 
+
 # Build results
- 
+
 [Dd]ebug/
 [Rr]elease/
 x64/
 build/
 [Bb]in/
 [Oo]bj/
- 
+
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
- 
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
- 
+
 *_i.c
 *_p.c
 *.ilk
@@ -42,13 +42,13 @@ build/
 *.pidb
 *.log
 *.scc
- 
+
 # OS generated files #
 .DS_Store*
 ehthumbs.db
 Icon?
 Thumbs.db
- 
+
 # Visual C++ cache files
 ipch/
 *.aps
@@ -56,32 +56,32 @@ ipch/
 *.opensdf
 *.sdf
 *.cachefile
- 
+
 # Visual Studio profiler
 *.psess
 *.vsp
 *.vspx
- 
+
 # Guidance Automation Toolkit
 *.gpState
- 
+
 # ReSharper is a .NET coding add-in
 _ReSharper*/
 *.[Rr]e[Ss]harper
- 
+
 # TeamCity is a build add-in
 _TeamCity*
- 
+
 # DotCover is a Code Coverage Tool
 *.dotCover
- 
+
 # NCrunch
 *.ncrunch*
 .*crunch*.local.xml
- 
+
 # Installshield output folder
 [Ee]xpress/
- 
+
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
 DocProject/Help/*.HxT
@@ -91,24 +91,24 @@ DocProject/Help/*.hhk
 DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
- 
+
 # Click-Once directory
 publish/
- 
+
 # Publish Web Output
 *.Publish.xml
- 
+
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
 #packages/
- 
+
 # Windows Azure Build Output
 csx
 *.build.csdef
- 
+
 # Windows Store app package directory
 AppPackages/
- 
+
 # Others
 sql/
 *.Cache
@@ -122,59 +122,62 @@ ClientBin/
 *.publishsettings
 modulesbin/
 tempbin/
- 
+
 # EPiServer Site file (VPP)
 AppData/
- 
+
 # RIA/Silverlight projects
 Generated_Code/
- 
+
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 UpgradeLog*.htm
- 
+
 # vim
 *.txt~
 *.swp
 *.swo
- 
+
 # svn
 .svn
- 
+
 # SQL Server files
 **/App_Data/*.mdf
 **/App_Data/*.ldf
 **/App_Data/*.sdf
- 
- 
+
+
 #LightSwitch generated files
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
- 
+
 # =========================
 # Windows detritus
 # =========================
- 
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
- 
+
 # Folder config file
 Desktop.ini
- 
+
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
- 
+
 # Mac desktop service store files
 .DS_Store
- 
+
 # SASS Compiler cache
 .sass-cache
- 
+
 # Visual Studio 2014 CTP
 **/*.sln.ide
 *.sln
+
+#Jekyll
+/_site
