Add screenshot and change site name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # name of the software
-name: SendGrid Communication Transport
+name: SendGrid Email Transport
 # licence of the software
 license: Apache 2.0
 licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.html
