Make master branch app-veyor friendly

--- a/.gitignore
+++ b/.gitignore
@@ -100,7 +100,7 @@ publish/
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-#packages/
+packages/
 
 # Windows Azure Build Output
 csx
@@ -181,3 +181,102 @@ $RECYCLE.BIN/
 
 #Jekyll
 /_site
+.vs/
+script/cibuild.sh
+script/citest.sh
+script/deploy.sh
+_layouts/default.html
+_layouts/home.html
+assets/css/docs.min.css
+assets/css/featherlight.min.css
+assets/css/font-awesome.min.css
+assets/css/style.css
+assets/fonts/FontAwesome.otf
+assets/fonts/fontawesome-webfont.eot
+assets/fonts/fontawesome-webfont.svg
+assets/fonts/fontawesome-webfont.ttf
+assets/fonts/fontawesome-webfont.woff
+assets/fonts/fontawesome-webfont.woff2
+assets/fonts/glyphicons-halflings-regular.eot
+assets/fonts/glyphicons-halflings-regular.svg
+assets/fonts/glyphicons-halflings-regular.ttf
+assets/fonts/glyphicons-halflings-regular.woff
+assets/fonts/glyphicons-halflings-regular.woff2
+assets/js/bootstrap.min.js
+assets/js/docs.min.js
+assets/js/featherlight.min.js
+assets/js/jquery-1.12.2.min.js
+assets/less/bootstrap-3.3.6/alerts.less
+assets/less/bootstrap-3.3.6/badges.less
+assets/less/bootstrap-3.3.6/bootstrap.less
+assets/less/bootstrap-3.3.6/breadcrumbs.less
+assets/less/bootstrap-3.3.6/button-groups.less
+assets/less/bootstrap-3.3.6/buttons.less
+assets/less/bootstrap-3.3.6/carousel.less
+assets/less/bootstrap-3.3.6/close.less
+assets/less/bootstrap-3.3.6/code.less
+assets/less/bootstrap-3.3.6/component-animations.less
+assets/less/bootstrap-3.3.6/dropdowns.less
+assets/less/bootstrap-3.3.6/forms.less
+assets/less/bootstrap-3.3.6/glyphicons.less
+assets/less/bootstrap-3.3.6/grid.less
+assets/less/bootstrap-3.3.6/input-groups.less
+assets/less/bootstrap-3.3.6/jumbotron.less
+assets/less/bootstrap-3.3.6/labels.less
+assets/less/bootstrap-3.3.6/list-group.less
+assets/less/bootstrap-3.3.6/media.less
+assets/less/bootstrap-3.3.6/mixins.less
+assets/less/bootstrap-3.3.6/mixins/alerts.less
+assets/less/bootstrap-3.3.6/mixins/background-variant.less
+assets/less/bootstrap-3.3.6/mixins/border-radius.less
+assets/less/bootstrap-3.3.6/mixins/buttons.less
+assets/less/bootstrap-3.3.6/mixins/center-block.less
+assets/less/bootstrap-3.3.6/mixins/clearfix.less
+assets/less/bootstrap-3.3.6/mixins/forms.less
+assets/less/bootstrap-3.3.6/mixins/gradients.less
+assets/less/bootstrap-3.3.6/mixins/grid-framework.less
+assets/less/bootstrap-3.3.6/mixins/grid.less
+assets/less/bootstrap-3.3.6/mixins/hide-text.less
+assets/less/bootstrap-3.3.6/mixins/image.less
+assets/less/bootstrap-3.3.6/mixins/labels.less
+assets/less/bootstrap-3.3.6/mixins/list-group.less
+assets/less/bootstrap-3.3.6/mixins/nav-divider.less
+assets/less/bootstrap-3.3.6/mixins/nav-vertical-align.less
+assets/less/bootstrap-3.3.6/mixins/opacity.less
+assets/less/bootstrap-3.3.6/mixins/pagination.less
+assets/less/bootstrap-3.3.6/mixins/panels.less
+assets/less/bootstrap-3.3.6/mixins/progress-bar.less
+assets/less/bootstrap-3.3.6/mixins/reset-filter.less
+assets/less/bootstrap-3.3.6/mixins/reset-text.less
+assets/less/bootstrap-3.3.6/mixins/resize.less
+assets/less/bootstrap-3.3.6/mixins/responsive-visibility.less
+assets/less/bootstrap-3.3.6/mixins/size.less
+assets/less/bootstrap-3.3.6/mixins/tab-focus.less
+assets/less/bootstrap-3.3.6/mixins/table-row.less
+assets/less/bootstrap-3.3.6/mixins/text-emphasis.less
+assets/less/bootstrap-3.3.6/mixins/text-overflow.less
+assets/less/bootstrap-3.3.6/mixins/vendor-prefixes.less
+assets/less/bootstrap-3.3.6/modals.less
+assets/less/bootstrap-3.3.6/navbar.less
+assets/less/bootstrap-3.3.6/navs.less
+assets/less/bootstrap-3.3.6/normalize.less
+assets/less/bootstrap-3.3.6/pager.less
+assets/less/bootstrap-3.3.6/pagination.less
+assets/less/bootstrap-3.3.6/panels.less
+assets/less/bootstrap-3.3.6/popovers.less
+assets/less/bootstrap-3.3.6/print.less
+assets/less/bootstrap-3.3.6/progress-bars.less
+assets/less/bootstrap-3.3.6/responsive-embed.less
+assets/less/bootstrap-3.3.6/responsive-utilities.less
+assets/less/bootstrap-3.3.6/scaffolding.less
+assets/less/bootstrap-3.3.6/tables.less
+assets/less/bootstrap-3.3.6/theme.less
+assets/less/bootstrap-3.3.6/thumbnails.less
+assets/less/bootstrap-3.3.6/tooltip.less
+assets/less/bootstrap-3.3.6/type.less
+assets/less/bootstrap-3.3.6/utilities.less
+assets/less/bootstrap-3.3.6/variables.less
+assets/less/bootstrap-3.3.6/wells.less
+assets/less/style.less
+Gemfile.lock
+SendGrid/packages/
