--- a/SendGrid/SendGrid.csproj
+++ b/SendGrid/SendGrid.csproj
@@ -33,16 +33,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotLiquid, Version=1.0.0.0, Culture=neutral, PublicKeyToken=82e46016ecf9f07c, processorArchitecture=MSIL">
-      <HintPath>..\packages\DotLiquid.1.0.0.0\lib\net451\DotLiquid.dll</HintPath>
+      <HintPath>..\packages\\DotLiquid.1.0.0.0\lib\net451\DotLiquid.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Rock, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Rock">
       <HintPath>..\packages\Rock.1.5.0.69\lib\net451\Rock.dll</HintPath>
-      <Private>True</Private>
+    </Reference>
+    <Reference Include="Sendgrid.Webhooks">
+      <HintPath>..\packages\Sendgrid.Webhooks.1.1.0\lib\net40\Sendgrid.Webhooks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
