--- a/SendGrid/SendGrid.csproj
+++ b/SendGrid/SendGrid.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>com.bricksandmortarstudio.SendGrid</RootNamespace>
     <AssemblyName>com.bricksandmortarstudio.SendGrid</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -33,14 +33,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotLiquid, Version=1.0.0.0, Culture=neutral, PublicKeyToken=82e46016ecf9f07c, processorArchitecture=MSIL">
-      <HintPath>..\packages\\DotLiquid.1.0.0.0\lib\net451\DotLiquid.dll</HintPath>
+      <HintPath>..\..\Rock\DotLiquid\bin\Debug\DotLiquid.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Rock">
-      <HintPath>..\packages\Rock.1.5.0.69\lib\net451\Rock.dll</HintPath>
+      <HintPath>..\..\Rock\Rock\bin\Debug\Rock.dll</HintPath>
     </Reference>
     <Reference Include="Sendgrid.Webhooks">
       <HintPath>..\packages\Sendgrid.Webhooks.1.1.0\lib\net40\Sendgrid.Webhooks.dll</HintPath>
